fix: wrap guide z-index position

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -13,3 +13,9 @@ atom-text-editor[mini] {
 atom-workspace-axis.vertical > atom-pane-container.panes atom-text-editor.editor {
   padding: 0 0 0 @component-padding;
 }
+
+// ----------------------------------------------------------------- Wrap guides
+
+atom-text-editor .wrap-guide {
+  z-index: -1;
+}
